--- a/.github/workflows/internal_01.yml
+++ b/.github/workflows/internal_01.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI-internal-01
 
 # Controls when the workflow will run
 on:
@@ -18,7 +18,8 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+#     runs-on: ubuntu-githubactions-internal
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -34,3 +35,6 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          mkdir ~/test01
+          cd ~/test01
+          touch testFile01
