--- a/.github/workflows/internal_01.yml
+++ b/.github/workflows/internal_01.yml
@@ -5,8 +5,8 @@ name: CI-internal-01
 # Controls when the workflow will run
 on:
 #   # Triggers the workflow on push or pull request events but only for the "main" branch
-#   push:
-#     branches: [ "main" ]
+  push:
+    branches: [ "main" ]
 #   pull_request:
 #     branches: [ "main" ]
 
@@ -33,8 +33,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          mkdir ~/test01
-          cd ~/test01
-          touch testFile01
+          pwd
+          ./testScript01.sh
