--- a/.github/workflows/internal_01.yml
+++ b/.github/workflows/internal_01.yml
@@ -34,4 +34,5 @@ jobs:
       - name: Run a multi-line script
         run: |
           pwd
+          chmod +x ./testScript01.sh
           ./testScript01.sh
